--- a/homework/hw2/Untitled.ipynb
+++ b/homework/hw2/Untitled.ipynb
@@ -2,68 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "special-pointer",
+   "id": "enclosed-watson",
    "metadata": {
     "toc": true
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Question-1:\" data-toc-modified-id=\"Question-1:-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span><strong><em>Question 1:</em></strong></a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "raised-blank",
+   "execution_count": 1,
+   "id": "numerical-vaccine",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-01T20:52:10.353532Z",
-     "start_time": "2021-02-01T20:52:10.332Z"
+     "end_time": "2021-02-10T18:29:29.580001Z",
+     "start_time": "2021-02-10T18:29:27.869811Z"
     }
    },
    "outputs": [],
    "source": [
-    "### Install required packages \n",
-    "\n",
-    "library(tidyverse) \n",
-    "library(reshape2) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "pending-consumption",
-   "metadata": {},
-   "source": [
-    "## ***Question 1:*** \n",
-    "\n",
-    "Write a function to convert a decimal number to a binary number. \n",
-    "****\n",
-    "*Extend the code to handle fractional numbers* "
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-prayer",
+   "id": "competitive-diagnosis",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 28.32\n",
+    "while n > 0: \n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.6.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
